ndb - bug#28077 - remove incorrect ndbrequire in lgman, plus fix accounting of free_buffer_words